syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.defaults";
option java_multiple_files = true;

package defaults;

message MoodRecord {
    string time = 1;
    repeated string moods = 2;
    repeated string activities = 3;
    string question = 4;
    string answer = 5;
    double score = 6;
}
